[gd_scene load_steps=8 format=3 uid="uid://ccyr1gcrpymuj"]

[ext_resource type="Texture2D" uid="uid://56i4gycmc5xd" path="res://Assets_PixelAdventure/Enemies/Plant/Bullet.png" id="1_36ttj"]
[ext_resource type="Script" path="res://Personajes/EnemigoPlanta/plant_bullet.gd" id="1_xyjsj"]
[ext_resource type="Script" path="res://Personajes/EnemigoPlanta/destruirse.gd" id="2_alpds"]
[ext_resource type="PackedScene" uid="uid://sqxbpo7m6rht" path="res://Trampas/dmg_player.tscn" id="3_b4b1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_obu2l"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ps64y"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3u3ou"]
radius = 5.0

[node name="plantBullet" type="CharacterBody2D" groups=["Enemigos"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_xyjsj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_obu2l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_36ttj")

[node name="dmgPlayer" parent="." instance=ExtResource("3_b4b1o")]

[node name="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(0, 0)
shape = SubResource("CircleShape2D_ps64y")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_alpds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3u3ou")

[node name="RayCast2DLeft" type="RayCast2D" parent="Area2D"]
target_position = Vector2(-5, 0)
collision_mask = 4

[node name="RayCast2DRight" type="RayCast2D" parent="Area2D"]
target_position = Vector2(5, 0)
collision_mask = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="heHechoDanio" from="dmgPlayer" to="." method="_on_dmg_player_he_hecho_danio"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="dmgPlayer"]
